--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "firebase": "^5.8.5",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
